--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
-    <title>got banana?</title>
+    <title>code no evil</title>
   </head>
 
   <body>
@@ -20,8 +20,8 @@
       <div class="inner">
 
         <header>
-          <h1>ook. ook.</h1>
-          <h2>You found The Tribe of Code Monkeys.</h2>
+          <h1>The Tribe</h1>
+          <h2>See no Evil. Hear no Evil. Code no Evil.</h2>
         </header>
 
         <section id="downloads" class="clearfix">
