Project list update

--- a/index.html
+++ b/index.html
@@ -34,12 +34,10 @@
           <h2><a name="our-current-projects" class="anchor" href="#our-current-projects"><span class="octicon octicon-link"></span></a>Our current projects</h2>
 
           <ul>
-            <li><a href="/code-patterns">code-patterns</a></li>
-            <li><a href="/hbase-client">hbase-client</a></li>
+            <li><a href="/hadoop-client">hadoop-client</a></li>
             <li><a href="/thought-stream">thought-stream</a></li>
-            <li><a href="https://github.com/TheTribe/ReactiveSocket">ReactiveSocket</a></li>
-            <li><a href="https://github.com/TheTribe/vs-project-normalizer">vs-project-normalizer</a></li>
-            <li><a href="/RestSharp.Injection">RestSharp.Injection</a></li>
+            <li><a href="/code-patterns">code-patterns</a></li>
+            <li><a href="https://github.com/TheTribe">more!</a></li>
           </ul>
         </section>
 
