--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
           <ul>
             <li><a href="/hadoop-client">hadoop-client</a></li>
-            <li><a href="/thought-stream">thought-stream</a></li>
+            <li><a href="https://github.com/TheTribe/media-types">media-types</a></li>
             <li><a href="/code-patterns">code-patterns</a></li>
             <li><a href="https://github.com/TheTribe">more!</a></li>
           </ul>
