--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
           <h2><a name="our-current-projects" class="anchor" href="#our-current-projects"><span class="octicon octicon-link"></span></a>Our current projects</h2>
 
           <ul>
+            <li><a href="/blanket-config">blanket-config</a></li>
             <li><a href="/hadoop-client">hadoop-client</a></li>
             <li><a href="https://github.com/TheTribe/media-types">media-types</a></li>
             <li><a href="https://github.com/TheTribe/dotnet_solutions">dotnet_solutions</a></li>
